TASK: Prevent content shift when selecting new asset by providing loading preview which is equally height as the image

--- a/packages/neos-ui-link-editor-core/src/presentation/IconCard/style.module.css
+++ b/packages/neos-ui-link-editor-core/src/presentation/IconCard/style.module.css
@@ -6,7 +6,7 @@
     grid-template-rows: repeat(2, 1fr);
     background-color: #141414;
     padding: 8px 16px;
-    min-height: 50px;
+    height: 50px;
 }
 
 .iconWrapper {
